@@ -74,5 +74,6 @@ class Mk5Mode : public Mode
 
     int framesamples, framebytes, samplestounpack, fanout;
     struct mark5_stream *mark5stream;
+    int *invalid; // stores per-band invalid data counts after each unpack (VDIF only)
 };
 // vim: shiftwidth=2:softtabstop=2:expandtab
